src/mesa/drivers/dri/i965/gen8_blorp.c
@@ -156,6 +156,29 @@ gen8_blorp_emit_blend_state(struct brw_context *brw,
    return blend_state_offset;
 }
 
+/* Hardware seems to try to fetch the constants even though the corresponding
+ * stage gets disabled. Therefore make sure the settings for the constant
+ * buffer are valid.
+ */
+static void
+gen8_blorp_emit_disable_constant_state(struct brw_context *brw,
+                                       unsigned opcode)
+{
+   BEGIN_BATCH(11);
+   OUT_BATCH(opcode << 16 | (11 - 2));
+   OUT_BATCH(0);
+   OUT_BATCH(0);
+   OUT_BATCH(0);
+   OUT_BATCH(0);
+   OUT_BATCH(0);
+   OUT_BATCH(0);
+   OUT_BATCH(0);
+   OUT_BATCH(0);
+   OUT_BATCH(0);
+   OUT_BATCH(0);
+   ADVANCE_BATCH();
+}
+
 /* 3DSTATE_VS
  *
  * Disable vertex shader.
@@ -656,6 +679,11 @@ gen8_blorp_exec(struct brw_context *brw, const struct brw_blorp_params *params)
 
    const uint32_t cc_state_offset = gen6_blorp_emit_cc_state(brw);
    gen7_blorp_emit_cc_state_pointer(brw, cc_state_offset);
+
+   gen8_blorp_emit_disable_constant_state(brw, _3DSTATE_CONSTANT_VS);
+   gen8_blorp_emit_disable_constant_state(brw, _3DSTATE_CONSTANT_HS);
+   gen8_blorp_emit_disable_constant_state(brw, _3DSTATE_CONSTANT_DS);
+   gen8_blorp_emit_disable_constant_state(brw, _3DSTATE_CONSTANT_GS);
 
    gen8_blorp_emit_disable_constant_ps(brw);
    wm_bind_bo_offset = gen8_blorp_emit_surface_states(brw, params);
